--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.2",
@@ -28,14 +29,24 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.0.1",
     "@vitejs/plugin-legacy": "^1.3.3",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.4",
+    "jest-transform-stub": "^2.0.0",
     "less": "^4.1.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "vite": "~2.2.4",
     "vite-plugin-imp": "^2.0.7"
